--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/deebaa2443.js" crossorigin="anonymous"></script>
 </head>
 <body class="open-sans-normal">
-    <header class="header secondary-bgc hide">
+    <header class="header secondary-bgc">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
